; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_node.c_make_var.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_node.c_make_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @make_var(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @RTERangeTablePosn(i32* %15, i32* %16, i32* %11)
  store i32 %17, i32* %10, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @get_rte_attribute_type(i32* %18, i32 %19, i32* %12, i32* %13, i32* %14)
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %13, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %11, align 4
  %27 = call %struct.TYPE_4__* @makeVar(i32 %21, i32 %22, i32 %23, i32 %24, i32 %25, i32 %26)
  store %struct.TYPE_4__* %27, %struct.TYPE_4__** %9, align 8
  %28 = load i32, i32* %8, align 4
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  ret %struct.TYPE_4__* %31
}

declare dso_local i32 @RTERangeTablePosn(i32*, i32*, i32*) #1

declare dso_local i32 @get_rte_attribute_type(i32*, i32, i32*, i32*, i32*) #1

declare dso_local %struct.TYPE_4__* @makeVar(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
